# reversible-logic

./: AGENT.md  Cargo.toml  README.md
src/: ancilla.rs  circuit.rs  gate.rs  lib.rs  permutation.rs  synthesis.rs  uncompute.rs
